feat: 🎸 rename action to mode and add status to editor

--- a/lib/headless_blog_web/templates/admin/post/form.html.eex
+++ b/lib/headless_blog_web/templates/admin/post/form.html.eex
@@ -5,7 +5,10 @@
       <%= error_tag f, :title %>
     </div>
     <div class="md-editor__header-status">
-      <%= submit "Save", class: "btn btn-primary" %>
+      <div class="px-5 inline-block uppercase text-sm font-bold text-gray-600">
+        <%= input_value f, :status %>
+      </div>
+      <%= submit "Save", class: "btn btn-primary", phx_disable_with: "Saving..." %>
     </div>
   </div>
   <div class="md-editor__area">
