--- a/lib/headless_blog_web/templates/admin/post/form.html.eex
+++ b/lib/headless_blog_web/templates/admin/post/form.html.eex
@@ -5,8 +5,11 @@
       <%= error_tag f, :title %>
     </div>
     <div class="md-editor__header-status">
-      <div class="px-5 inline-block uppercase text-sm font-bold text-gray-600">
-        <%= input_value f, :status %>
+      <div class="inline-block relative">
+        <%= select f, :status, ["Draft": "draft","Published": "published"], class: "block appearance-none w-full bg-none border border-gray-400 px-4 py-2 pr-8 rouded shadow leading-right focus:outline-none focus:shadow-outline"%>
+        <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+          <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+        </div>
       </div>
       <%= submit "Save", class: "btn btn-primary", phx_disable_with: "Saving..." %>
     </div>
